# LearnQL

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  main.cpp
docs/: Doxyfile  README.md  conf.py  index.rst  requirements.txt
docs/api/: catalog.rst  core.rst  coroutines.rst  debug.rst  index.rst  query.rst  ranges.rst  reflection.rst  serialization.rst  storage.rst
docs/architecture/: btree-implementation.rst  expression-templates.rst  overview.rst  performance.rst  reflection-system.rst  storage-engine.rst
docs/doxyxml/: Doxyfile.xml  _adaptors_8hpp.xml  _async_query_8hpp.xml  _b_tree_index_8hpp.xml  _batch_iterator_8hpp.xml  _binary_expr_8hpp.xml  _binary_reader_8hpp.xml  _binary_writer_8hpp.xml  _const_expr_8hpp.xml  _database_8hpp.xml  _db_inspector_8hpp.xml  _debug_utils_8hpp.xml  _execution_plan_8hpp.xml  _expr_8hpp.xml  _field_8hpp.xml  _field_expr_8hpp.xml  _field_extractor_8hpp.xml  _field_info_8hpp.xml  _field_metadata_8hpp.xml  _generator_8hpp.xml  _group_by_8hpp.xml  _index_metadata_8hpp.xml  _join_8hpp.xml  _learn_q_l_8hpp.xml  _logical_expr_8hpp.xml  _page_8hpp.xml  _persistent_b_tree_index_8hpp.xml  _persistent_multi_value_secondary_index_8hpp.xml  _persistent_secondary_index_8hpp.xml  _profiler_8hpp.xml  _property_8hpp.xml  _proxy_vector_8hpp.xml  _query_8hpp.xml  _query_view_8hpp.xml  _queryable_8hpp.xml  _read_only_table_8hpp.xml  _record_id_8hpp.xml  _secondary_index_8hpp.xml  _serializable_8hpp.xml  _statistics_8hpp.xml  (+142 more)
docs/getting-started/: best-practices.rst  core-concepts.rst  (+3 more)
learnql/: LearnQL.hpp
(+54 files in other folders)
